[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://interface/start/create_account.gd" id="1_42g6h"]
[ext_resource type="Theme" uid="uid://ff8ufmacq6dq" path="res://interface/theme/default.tres" id="1_264ce"]
[ext_resource type="Texture2D" uid="uid://lk8f5upfp7go" path="res://interface/theme/textures/window_h.png" id="2_psva4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_02yfj"]
texture = ExtResource("2_psva4")
texture_margin_left = 23.0
texture_margin_top = 31.0
texture_margin_right = 23.0
texture_margin_bottom = 31.0

[node name="CreateAccount" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -176.5
offset_right = 220.5
offset_bottom = 176.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_42g6h")

[node name="Window" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.5
offset_top = -176.5
offset_right = 213.5
offset_bottom = 176.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_264ce")
theme_override_styles/panel = SubResource("StyleBoxTexture_02yfj")

[node name="MarginContainer" type="MarginContainer" parent="Window"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2

[node name="WelcomeLabel" type="Label" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Create your Account"
horizontal_alignment = 1

[node name="EmailLabel" type="Label" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Email"

[node name="Email" type="LineEdit" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Password"

[node name="Password" type="LineEdit" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
secret = true

[node name="Rules" type="CheckBox" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "I have read and agree to the rules"

[node name="HBoxContainer" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackToLoginButton" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back to Login"

[node name="CreateAccountButton" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Create Account"

[connection signal="text_changed" from="Window/MarginContainer/VBoxContainer/Email" to="." method="_on_email_edit_text_changed"]
[connection signal="text_changed" from="Window/MarginContainer/VBoxContainer/Password" to="." method="_on_password_edit_text_changed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/Rules" to="." method="_on_remember_me_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer/BackToLoginButton" to="." method="_on_back_to_login_button_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
